# TextAdventure

./: .env.sample  .gitignore  LLMS.md  README.md  pyproject.toml  test_journey.json
saves/: test_journey.json
saves/factions/: Ardentia.json  Eldoria.json  Sylvanar.json
saves/journey/: Aldermere.json  Kaeloria.json
saves/scenarios/: Ardentia.json  Eldoria.json  Sylvanar.json
src/: Game.py  UI.py  battle.py  dump_world.py  faction.py  main.py  scene.py  test_battle_ui.py  test_chat.py  test_create_equipment.py  test_dialog.py  test_faction.py  test_inventory_ui.py  test_questions.py  test_skill_generation.py  test_treasure_scene.py  test_worldgen.py  testing_battle.py  world.py
src/Characters/: character.py  create.py  equipment.py  skill.py
src/Generation/: __init__.py  area.py  battle_scene.py  enemy_type.py  equipment.py  faction.py  final_battle_scene.py  generator.py  intro_scene.py  mission.py  npc.py  outro_scene.py  race.py  rest_scene.py  riddle_scene.py  scenario.py  selection.py  skill.py  summarize_context.py  treasure_play.py  treasure_scene.py
src/Journey/: Action.py  BaseActionComponent.py  BaseLayout.py  CapitalLayout.py  Circumstance.py  Difficulty.py  Interaction.py  Intuition.py  Journey.py  Layout.py  LoopManager.py  Mission.py  Play.py  Scene.py  SiegeLayout.py  TreasurePlay.py  TreasureScene.py  utility.py
src/Journey/Plays/: BattlePlay.py  IntroPlay.py  (+8 more)
src/llm/: __init__.py  connector.py  dialogue.py  error.py  question.py  structured.py
src/log/: __init__.py  logging.conf
src/ui/: battle_ui.py  character_ui.py  inventory_ui.py
(+126 files in other folders)
