[tool.poetry]
name = "textadventure"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
google-generativeai = "^0.2.1"
cohere = "^4.27"
openai = "^1.2.4"
tiktoken = "^0.5.1"
pydantic = "^2.4.2"
numpy = "^1.26.1"
pydub = "^0.25.1"
sounddevice = "^0.4.6"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
